--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = R-texreg
 url = https://cran.r-project.org/src/contrib/texreg_1.36.23.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/leifeld/texreg/
 
 [autospec]
 # build 32 bit libraries
@@ -52,7 +52,7 @@ use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
-use_lto = false
+use_lto = true
 # require package verification for build
 verify_required = false
 
